2004-12-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation): Mark `shell-command'
	as magic for Emacs only.
	(tramp-wait-for-output): Fix error in deleting region.  From Kai
	Grossjohann <kai.grossjohann@gmx.net>.

	* tramp-vc.el (tramp-vc-do-command, tramp-vc-do-command-new)
	(tramp-vc-simple-command): Call `tramp-handle-shell-command' but
	`shell-command', because it isn't magic in XEmacs.  Reported by
	Adrian Aichner <adrian@xemacs.org>.

2004-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-file-name-handler-alist): Add entry for
	`substitute-in-file-name.
	(tramp-smb-handle-substitute-in-file-name): New defun.
	(tramp-smb-advice-PC-do-completion): Delete advice.

2004-12-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-send-perl-script): Change order of
	parameters wrt Tramp convention.
	(tramp-handle-file-attributes-with-perl)
	(tramp-handle-directory-files-and-attributes): Apply it.

2004-11-26  Lars Hansen  <larsh@math.ku.dk>

	Sync with Emacs CVS (Michael Albinus <michael.albinus@gmx.de>)
	
	* tramp.el (tramp-handle-directory-files-and-attributes): New function.
	(tramp-perl-directory-files-and-attributes): New constant.
	(tramp-file-name-handler-alist): Delete file-directory-files, add
	directory-files-and-attributes.
	(tramp-perl-file-attributes): Surround uid and gid by double
	quotes. Change parameter id-format from nonnumeric.
	(tramp-convert-file-attributes): New function.
	(tramp-handle-file-attributes): Use it.
	(tramp-maybe-send-perl-script): New function.
	(tramp-handle-file-attributes-with-perl): Use it. Don't convert
	file mode. Change parameter id-format from nonnumeric.
	(tramp-handle-file-attributes-with-ls): Change parameter id-format
	from nonnumeric.
	(tramp-post-connection): Don't send tramp-perl-file-attributes
	script. Reset connection property "perl-scripts".
	(tramp-handle-insert-directory): Run real handler when ls-lisp is
	in use.
